--- a/app/views/lookbook/components/_nav_group.html.erb
+++ b/app/views/lookbook/components/_nav_group.html.erb
@@ -1,4 +1,4 @@
-<li key="<%= node.id %>" class="<%= classes %>">
+<li key="nav-group-<%= node.id %>-item" class="<%= classes %>">
   <div id="nav-group-<%= node.id %>" x-data="navGroup" :class="{hidden}" x-cloak>
     <div @click="toggle" class="nav-toggle py-[5px]" style="padding-left: calc((<%= node.hierarchy_depth - 1 %> * 12px) + 0.5rem);">
       <%= icon "${open ? 'chevron-down' : 'chevron-right'}", size: 3, class: "mr-1 text-gray-500" %>
