--- a/app/views/lookbook/components/_nav_page.html.erb
+++ b/app/views/lookbook/components/_nav_page.html.erb
@@ -1,1 +1,22 @@
-<%= component "nav_item", item: node, depth: node.hierarchy_depth + 1, display: :node %>
+<%
+path = page_path(node.lookup_path)
+depth = node.hierarchy_depth + 1
+%>
+<li key="nav-page-<%= node.id %>-item">
+  <div id="nav-page-<%= node.id %>" x-data="navItem(<%= node.matchers.to_json %>)" :class="{hidden}" data-path="<%= path %>" x-cloak>
+    <a href="<%= path %>"
+      class="nav-link pr-3 py-[5px] flex items-center w-full group transition hover:bg-gray-200 hover:bg-opacity-50"
+      style="padding-left: calc((<%= depth - 1 %> * 12px) + 0.5rem);"
+      x-ref="link"
+      :class="{'!bg-indigo-100':active}"
+      @click.stop.prevent="navigate"
+    >
+      <div class="relative w-3.5 h-3.5 mr-1.5 ml-[3px]" :class="active ? 'text-gray-900' : 'text-indigo-500'">
+        <%= icon "file", size: 3.5, class: "group-hover:text-indigo-800" %>
+      </div>
+      <div class="truncate whitespace-nowrap select-none">
+        <%= node.label %>
+      </div>
+    </a>
+  </div>
+</li>
