--- a/public/lookbook-assets/css/app.css
+++ b/public/lookbook-assets/css/app.css
@@ -975,14 +975,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-top: 0.75rem;
 }.mb-10 {
   margin-bottom: 2.5rem;
-}.mt-12 {
-  margin-top: 3rem;
+}.mt-10 {
+  margin-top: 2.5rem;
 }.ml-2 {
   margin-left: 0.5rem;
 }.mr-2 {
   margin-right: 0.5rem;
 }.mb-4 {
   margin-bottom: 1rem;
+}.mt-12 {
+  margin-top: 3rem;
 }.block {
   display: block;
 }.inline-block {
@@ -1262,6 +1264,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-top: 2rem;
 }.pb-10 {
   padding-bottom: 2.5rem;
+}.pt-6 {
+  padding-top: 1.5rem;
 }.pt-3 {
   padding-top: 0.75rem;
 }.pb-6 {
