--- a/app/views/lookbook/pages/not_found.html.erb
+++ b/app/views/lookbook/pages/not_found.html.erb
@@ -3,10 +3,12 @@
     <%= icon "alert-triangle", size: 10, class: "text-red-300 mx-auto" %>
     <div class="mt-3 text-gray-700 max-w-xs">
       <div data-role="page-not-found">
-        <h5 class="text-base">Not found</h5>
-        <p class="mt-2 text-gray-400 text-sm">
-          The page "<span class="text-gray-500"><%= params[:path] %></span>" does not exist.
-        </p>
+        <h5 class="text-base">Page not found</h5>
+        <% if params[:path].present? %>
+          <p class="mt-2 text-gray-400 text-sm">
+            The page "<span class="text-gray-500"><%= params[:path] %></span>" does not exist.
+          </p>
+        <% end %>
       </div>
     </div>
   </div>
