--- a/app/views/layouts/lookbook/application.html.erb
+++ b/app/views/layouts/lookbook/application.html.erb
@@ -3,15 +3,16 @@
     id="app"
     x-data="app"
     :style="`grid-template-columns: ${$store.sidebar.width}px 1px 1fr;`"
+    :class="{'grid': $store.sidebar.open && $store.layout.desktop}"
     @popstate.window="await update(); $dispatch('page:changed')"
     @refresh.window="update"
     @resize.window="$store.layout.desktop = window.innerWidth >= $store.layout.desktopWidth"
-    class="md:grid w-screen h-screen">
+    class="w-screen h-screen">
     <%= component "sidebar" %>
     <div
       x-data="splitter('vertical', {minSize: $store.sidebar.minWidth})"
       class="h-full gutter border-r border-gray-300 relative"
-      x-show="$store.layout.desktop"
+      x-show="$store.sidebar.open && $store.layout.desktop"
       x-effect="$store.sidebar.width = Math.min(splits[0] || $store.sidebar.width, $store.sidebar.maxWidth)"
       x-cloak>
       <div class="w-[9px] h-full bg-transparent hover:bg-indigo-100 hover:bg-opacity-20 transition absolute top-0 bottom-0 -translate-x-1/2 cursor-[col-resize] z-10"></div>
@@ -19,7 +20,8 @@
     <main
       id="main"
       class="h-full overflow-hidden w-full"
-      x-show="$store.layout.desktop || !$store.sidebar.open" x-cloak>
+      x-show="$store.layout.desktop || ($store.layout.mobile && !$store.sidebar.open)"
+      x-cloak>
       <%= yield %>
     </main>
   </div>
