--- a/app/views/lookbook/components/_filter.html.erb
+++ b/app/views/lookbook/components/_filter.html.erb
@@ -1,7 +1,7 @@
-<div x-data="filter" class="flex items-center w-full">
+<div x-data="filter" class="bg-white rounded-md border border-gray-200 " :class="{'!border-gray-300': focussed}">
   <input
     type="text"
-    class="text-sm px-4 h-10 w-full border-0 bg-transparent focus:outline-none outline-none focus:ring-0 placeholder:italic placeholder:text-gray-400"
+    class="text-sm pl-3 pr-8 w-full border-0 bg-transparent focus:outline-none outline-none focus:ring-0 text-gray-500 placeholder:italic placeholder:text-gray-500"
     placeholder="Filter by name&hellip;"
     x-ref="input"
     x-model="$store.filter.raw"
@@ -10,8 +10,9 @@
     @keyup.f.document="focus"
     @filter:clear.document="clear"
     @filter:focus.document="focus"
-  >
-  <button class="text-gray-400 hover:text-indigo-500 focus:ring-0 focus:outline-none absolute top-1/2 right-2 -translate-y-1/2" @click="clear">
+    @focus.stop="focussed = true"
+    @blur.stop="focussed = false">
+  <button class="text-gray-400 hover:text-indigo-500 focus:ring-0 focus:outline-none absolute top-1/2 right-5 -translate-y-1/2" @click="clear" :class="{hidden: !$store.filter.active}">
     <%= icon "x", size: 3, class: "hover:text-indigo-500" %>
   </button>
 </div>
