Fix preview embeds after page morph

--- a/app/views/lookbook/pages/show.html.erb
+++ b/app/views/lookbook/pages/show.html.erb
@@ -41,7 +41,7 @@
         </header>
       <% end %>
       <div id="page-main-<%= @page.id %>" data-morph-strategy="replace">
-        <div class="prose max-w-none prose-a:text-indigo-900" x-init="reloadIframes">
+        <div class="prose max-w-none prose-a:text-indigo-900">
           <%= @page_content %>
         </div>
       </div>
