--- a/app/views/lookbook/components/_embed.html.erb
+++ b/app/views/lookbook/components/_embed.html.erb
@@ -1,4 +1,4 @@
-<div id="<%= id %>" x-data="embed" class="not-prose embed border border-gray-300 rounded-md overflow-hidden" @page:morphed.window="resize" @iframe:resized.window="onIframeResized">
+<div id="<%= id %>" x-data="embed" class="not-prose embed border border-gray-300 rounded-md overflow-hidden" @page:morphed.window="recaclulateIframeHeight">
   <header class="px-3 py-2 flex items-center text-xs text-gray-400 bg-white border-b border-gray-300">
     <div class="text-gray-500">
       <%= example.preview.label %> (<%= example.label %>)
@@ -19,11 +19,12 @@
   <div class="checked-bg overflow-hidden">
     <div x-ref="resizer" class="grid bg-white relative grid-cols-[1fr_17px] w-full" :style="`max-width: ${maxWidth}; height: ${height ? `${height}px` : 'auto'}`">
       <iframe seamless
+        id="<%= id %>-iframe"
         x-ref="iframe"
         src="<%= lookbook.preview_path(example.path, params.merge(lookbook_embed: true)) %>"
         class="min-w-full h-full w-px"
         :class="{ 'pointer-events-none': reflowing }"
-        @load="resize">
+        @load="recaclulateIframeHeight">
       </iframe>
       <div
         class="resize-handle border-r border-l cursor-[col-resize] relative -right-px"
