--- a/app/views/lookbook/components/_sidebar.html.erb
+++ b/app/views/lookbook/components/_sidebar.html.erb
@@ -57,7 +57,7 @@
       <div class="flex items-center border-b border-t border-gray-300 h-10 bg-white px-4">   
         <h2 class="flex items-center flex-none">
           <%= icon "alert-triangle", size: 4, class: "text-red-700" %>
-          <span class="ml-2" >Errors</span>
+          <span class="ml-2">Preview load errors</span>
         </h2>
       </div>
       <div class="h-full max-h-[300px] overflow-hidden">
